fixing paths and more doc

--- a/docs/000_beginnings.ipynb
+++ b/docs/000_beginnings.ipynb
@@ -4,9 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# From Zero\n",
+    "# 000 From zeros\n",
     "\n",
     "If you have no idea what Python is, or if you have no idea what a Jupyter notebook is, or if you have no clue what is going at all, then this is probably a good a place to start!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `particula` & Python "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Jupyter notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get started"
    ]
   },
   {
@@ -14,7 +35,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%pip install -U particula"
+   ]
   },
   {
    "cell_type": "markdown",
