--- a/_sources/001_particle.ipynb
+++ b/_sources/001_particle.ipynb
@@ -9,72 +9,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/ngam/Repos/particula\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import imp\n",
-    "from aerosol_dynamics import particle"
+    "from particula import aerosol_dynamics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from particula.aerosol_dynamics import particle\n",
+    "from particula.aerosol_dynamics import environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'aerosol_dynamics.particle' from '/Users/ngam/Repos/particula/aerosol_dynamics/particle.py'>"
+       "<module 'particula.aerosol_dynamics.environment' from '/Users/ngam/Repos/particula/particula/aerosol_dynamics/environment.py'>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "imp.reload(particle)"
+    "imp.reload(particle)\n",
+    "imp.reload(environment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Environment = environment.Environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "environment = Environment(temperature=298.9, pressure=101325)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "298.9 kelvin"
+      ],
+      "text/latex": [
+       "$298.9\\ \\mathrm{kelvin}$"
+      ],
+      "text/plain": [
+       "298.9 <Unit('kelvin')>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "environment.temperature()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;31mSignature:\u001b[0m \u001b[0mparticle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mParticle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiffusive_knudsen_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSignature:\u001b[0m\n",
+      "\u001b[0mparticle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mParticle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiffusive_knudsen_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0menvironment\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mparticula\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maerosol_dynamics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menvironment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEnvironment\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mDocstring:\u001b[0m\n",
       "Diffusive Knudsen number.\n",
+      "Checks units: [dimensionless]\n",
       "\n",
       "The *diffusive* Knudsen number is different from Knudsen number.\n",
-      "The diffusive Knudsen number is the ratio of mean persistence distance and ion--particle electrostatic length scale.\n",
-      "\n",
-      "the ratio of the Knudsen number of the\n",
-      "TODO:\n",
-      "- do return statements in steps -> easier to debug\n",
-      "- assess if multi-step --> higher resources\n",
-      "\u001b[0;31mFile:\u001b[0m      ~/Repos/particula/aerosol_dynamics/particle.py\n",
+      "Ratio of:\n",
+      "    - numerator: mean persistence of one particle\n",
+      "    - denominator: effective length scale of\n",
+      "        particle--particle Coulombic interaction\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/Repos/particula/particula/aerosol_dynamics/particle.py\n",
       "\u001b[0;31mType:\u001b[0m      function\n"
      ]
     }
@@ -85,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +158,7 @@
        "'a'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +184,7 @@
        "4.188790204786392e-24 <Unit('kilogram')>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +210,7 @@
        "1e-09 <Unit('meter')>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +236,7 @@
        "1000.0 <Unit('kilogram / meter ** 3')>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +262,7 @@
        "0 <Unit('dimensionless')>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,85 +273,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "environment = Environment(temperature=298, pressure=101325)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "65.0 dimensionless"
+       "298 kelvin"
       ],
       "text/latex": [
-       "$65.0\\ dimensionless$"
+       "$298\\ \\mathrm{kelvin}$"
       ],
       "text/plain": [
-       "65.0 <Unit('dimensionless')>"
+       "298 <Unit('kelvin')>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "particle_a.knudsen_number()"
+    "environment.temperature()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "108.2687021635053 dimensionless"
+       "101325 pascal"
       ],
       "text/latex": [
-       "$108.2687021635053\\ dimensionless$"
+       "$101325\\ \\mathrm{pascal}$"
       ],
       "text/plain": [
-       "108.2687021635053 <Unit('dimensionless')>"
+       "101325 <Unit('pascal')>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "particle_a.slip_correction_factor()"
+    "environment.pressure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "3.1808027602144434×10<sup>-15</sup> kilogram/second"
+       "1.8364373881681775×10<sup>-5</sup> kilogram/(meter second)"
       ],
       "text/latex": [
-       "$3.1808027602144434\\times 10^{-15}\\ \\frac{\\mathrm{kilogram}}{\\mathrm{second}}$"
+       "$1.8364373881681775\\times 10^{-5}\\ \\frac{\\mathrm{kilogram}}{\\left(\\mathrm{meter} \\cdot \\mathrm{second}\\right)}$"
       ],
       "text/plain": [
-       "3.1808027602144434e-15 <Unit('kilogram / second')>"
+       "1.8364373881681775e-05 <Unit('kilogram / meter / second')>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "particle_a.friction_factor()"
+    "environment.dynamic_viscosity_air()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "6.643736692137542×10<sup>-8</sup> meter"
+      ],
+      "text/latex": [
+       "$6.643736692137542\\times 10^{-8}\\ \\mathrm{meter}$"
+      ],
+      "text/plain": [
+       "6.643736692137542e-08 <Unit('meter')>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "environment.mean_free_path_air()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "66.43736692137541 dimensionless"
+      ],
+      "text/latex": [
+       "$66.43736692137541\\ dimensionless$"
+      ],
+      "text/plain": [
+       "66.43736692137541 <Unit('dimensionless')>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "particle_a.knudsen_number(environment=Environment(temperature=298, pressure=101325))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -324,94 +427,13 @@
        "3.761362632869413e-24 <Unit('kilogram')>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "particle_a.reduced_mass(particle_b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "2.5419608801928475×10<sup>-15</sup> kilogram/second"
-      ],
-      "text/latex": [
-       "$2.5419608801928475\\times 10^{-15}\\ \\frac{\\mathrm{kilogram}}{\\mathrm{second}}$"
-      ],
-      "text/plain": [
-       "2.5419608801928475e-15 <Unit('kilogram / second')>"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "particle_a.reduced_friction_factor(particle_b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from aerosol_dynamics import physical_parameters as pp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'aerosol_dynamics.physical_parameters' from '/Users/ngam/Repos/particula/aerosol_dynamics/physical_parameters.py'>"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "imp.reload(pp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "1.380649×10<sup>-23</sup> kilogram meter<sup>2</sup>/(kelvin second<sup>2</sup>)"
-      ],
-      "text/latex": [
-       "$1.380649\\times 10^{-23}\\ \\frac{\\mathrm{kilogram} \\cdot \\mathrm{meter}^{2}}{\\left(\\mathrm{kelvin} \\cdot \\mathrm{second}^{2}\\right)}$"
-      ],
-      "text/plain": [
-       "1.380649e-23 <Unit('kilogram * meter ** 2 / kelvin / second ** 2')>"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pp.BOLTZMANN_CONSTANT"
    ]
   },
   {
@@ -602,34 +624,6 @@
    "source": [
     "particle_a.collision_kernel_continuum_limit(particle_b)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Particle' object has no attribute 'density'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/nd/59sydh9d3qd08jw_1j8q0z7w0000gn/T/ipykernel_20630/605195501.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mparticle_a\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdensity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Particle' object has no attribute 'density'"
-     ]
-    }
-   ],
-   "source": [
-    "particle_a.density()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
