--- a/_sources/getting_started.ipynb
+++ b/_sources/getting_started.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Startup and Installation\n",
+    "# Installing `particula`\n",
     "\n",
     "If you have no idea what Python is, or if you have no idea what a Jupyter notebook is, or if you have no clue what is going at all, then this is probably a good a place to start!"
    ]
