typos and edits

--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Environment` class forms the basis of the simulation setup in `particula`; it is in `particula/environment.py`. In summary, we use it to *describes* the environmental variables in which particles and condensing vapors exist and interact. For now, we define an environment by properties (via attributes) such as temperature and pressure with derived properties (via methods) such as the dynamic viscosity and mean free path of the medium gas.\n",
+    "The `Environment` class forms the basis of the simulation setup in `particula`; it is in `particula/environment.py`. In summary, we use it to *describe* the environment in which particles and condensing vapors exist and interact. For now, we define an environment by properties (via attributes) such as temperature and pressure with derived properties (via methods) such as the dynamic viscosity and mean free path of the medium gas.\n",
     "\n",
     "The `Environment` class can be imported from `particula.environment`,"
    ]
@@ -57,12 +57,44 @@
     "from particula.environment import Environment\n",
     "\n",
     "EnvOne = Environment(temperature=300) \n",
-    "print(EnvOne.temperature) # will print 300 K\n",
-    "print(EnvOne.pressure) # will print 101325 Pa (kg/m/s^2)\n",
+    "print(\"temperature is \", EnvOne.temperature) # will print 300 K\n",
+    "print(\"pressure is \", EnvOne.pressure) # will print 101325 Pa (kg/m/s^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from particula import u\n",
+    "from particula.environment import Environment\n",
+    "\n",
     "EnvTwo = Environment(temperature=300*u.K) \n",
-    "print(EnvTwo.temperature) # will print 300 K as well\n",
+    "print(\"temperature is \", EnvTwo.temperature) # will print 300 K as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from particula import u\n",
+    "from particula.environment import Environment\n",
+    "\n",
     "EnvThree = Environment()\n",
-    "print(EnvTwo.temperature) # will print 298.15 K (the default value)\n",
+    "print(\"temperature is \", EnvTwo.temperature) # will print 298.15 K (the default value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from particula import u\n",
+    "from particula.environment import Environment\n",
     "\n",
     "EnvWrong = Environment(temperature=300*u.m) # will raise an error"
    ]
@@ -71,14 +103,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the table above, a variety of attributes have default values from `particula.constants`, like the gas constant and Sutherland constant. This is to allow the user maximum flexibility, but they all fall on default values from the literature as discussed below."
+    "In the table above, a variety of attributes have default values from `particula.constants`, like the gas constant and Sutherland constant. This is to allow the user flexibility, but, if not provided, they all fall on default values from the literature as discussed below."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, one attribute has a default value from `particula.util`. As explained below, we calculate the dynamic viscosity via the Sutherland formula using primarily the temperature (and the reference values of temperature, visocsity, and Sutherland constant). The user can override this calculating by offering a different dynamic viscosity with the attribute `dynamic_viscosity`."
+    "Finally, one attribute has a default value from `particula.util`. As explained below, we calculate the dynamic viscosity via the Sutherland formula using the temperature (as well as the reference values of temperature, visocsity, and Sutherland constant). The user can override this calculating by offering a different dynamic viscosity with the attribute `dynamic_viscosity`."
    ]
   },
   {
@@ -87,7 +119,7 @@
    "source": [
     "## `Environment` methods\n",
     "\n",
-    "As discussed above, the `Environment` class also enables us to calculate the dynamic viscosity as well as the mean free path."
+    "As discussed above, the `Environment` class enables us to calculate the dynamic viscosity as well as the mean free path."
    ]
   },
   {
@@ -121,7 +153,7 @@
    "source": [
     "### `Environment.mean_free_path()`\n",
     "\n",
-    "The mean free path is the average distance of a molecule between collisions with other molecules present in the medium. We use the kinetic theory of gases to calculate the mean free path as\n",
+    "The mean free path is the average distance of a molecule between collisions with other molecules present in the medium. We use the kinetic theory of gases to calculate the mean free path in an ideal gas as\n",
     "\n",
     "$$\n",
     "\\lambda = \\frac{2 \\mu / p}{(8 \\, \\mathrm{MW} / (\\pi R T))^{1/2}} \n",
@@ -137,7 +169,7 @@
    "outputs": [],
    "source": [
     "from particula.environment import Environment\n",
-    "Environment().mean_free_path() # will produce approx 66.5 nm"
+    "print(\"mean free path is \", Environment().mean_free_path()) # will produce approx 66.5 nm"
    ]
   },
   {
@@ -146,10 +178,15 @@
    "source": [
     "## Notes\n",
     "\n",
-    "- While technically allowed, we discourage the users from using vectored temperature and pressure quantities for now. We design `particual` with the intention of having each point in time (calculation) having a unique set of conditions.\n",
+    "- While technically allowed, we discourage the users from using vectored temperature and pressure quantities for now. We design `particula` with the intention of having each point in time (calculation) having a unique set of conditions.\n",
     "- Attributes are called without parantheses, e.g. `Environment().temperature`.\n",
     "- Methods are called with parantheses, e.g. `Environment().mean_free_path()`."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
