--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -127,14 +127,7 @@
    "metadata": {},
    "source": [
     "### `Environment.dynamic_viscosity()`\n",
-    "\n",
-    "The dynamic viscosity is a property of the fluid, defining the resistance of the fluid to its own movement. The dynamic viscosity is calculated using the Sutherland formula ([reference](https://resources.wolframcloud.com/FormulaRepository/resources/Sutherlands-Formula)). The function can be found and is documented in `util.dynamic_vicosity.py`. It takes inputs of `temperature`, `reference_viscosity`, `reference_temperature`, and `sutherland_constant`. It returns a value for the dynamic viscosity at those variables. At default conditions (298.15 K and 101325 Pa), the dynamic viscosity is approximately 1.84e-5 kg/m/s. The Sutherland formula is\n",
-    "\n",
-    "$$\n",
-    "\\mu = \\frac{\\mu_{0}\\, (T/T_{0})^{3/2}\\, (T_{0} + C)}{C + T}\n",
-    "$$\n",
-    "\n",
-    "where $\\mu$ is the dynamic viscosity, $\\mu_{0}$ is the reference dynamic viscosity, $T$ is temperature, $T_{0}$ is the reference temperature, and $C$ is the Sutherland constant."
+    "More details: https://uncscode.github.io/particula/utilities/dynamic_viscosity.html"
    ]
   },
   {
@@ -153,13 +146,7 @@
    "source": [
     "### `Environment.mean_free_path()`\n",
     "\n",
-    "The mean free path is the average distance of a molecule between collisions with other molecules present in the medium. We use the kinetic theory of gases to calculate the mean free path in an ideal gas as\n",
-    "\n",
-    "$$\n",
-    "\\lambda = \\frac{2 \\mu / p}{(8 \\, \\mathrm{MW} / (\\pi R T))^{1/2}} \n",
-    "$$\n",
-    "\n",
-    "where $\\lambda$ is the mean free path, $\\mu$ is the dynamic viscosity, $p$ is the pressure, $\\mathrm{MW}$ is the molecular weight, $R$ is the gas constant, $T$ is the temperature. As noted above, the user can provide an explicit value for $\\mu$ or it can be calculated using the above formula (that is, the user can provide the inputs to the above formula for $\\mu$). At default conditions, $\\lambda$ is about 66.5 nm."
+    "More details: https://uncscode.github.io/particula/utilities/mean_free_path.html"
    ]
   },
   {
