--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperature is  300 kelvin\n",
+      "pressure is  101325 kilogram / meter / second ** 2\n"
+     ]
+    }
+   ],
    "source": [
     "from particula import u\n",
     "from particula.environment import Environment\n",
@@ -63,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperature is  300 kelvin\n"
+     ]
+    }
+   ],
    "source": [
     "from particula import u\n",
     "from particula.environment import Environment\n",
@@ -76,27 +93,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperature is  298.15 kelvin\n"
+     ]
+    }
+   ],
    "source": [
     "from particula import u\n",
     "from particula.environment import Environment\n",
     "\n",
     "EnvThree = Environment()\n",
-    "print(\"temperature is \", EnvTwo.temperature) # will print 298.15 K (the default value)"
+    "print(\"temperature is \", EnvThree.temperature) # will print 298.15 K (the default value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from particula import u\n",
     "from particula.environment import Environment\n",
     "\n",
-    "EnvWrong = Environment(temperature=300*u.m) # will raise an error"
+    "# EnvWrong = Environment(temperature=300*u.m) # will raise an error"
    ]
   },
   {
@@ -132,12 +157,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1.8371493734583912×10<sup>-5</sup> kilogram/(meter second)"
+      ],
+      "text/latex": [
+       "$1.8371493734583912\\times 10^{-5}\\ \\frac{\\mathrm{kilogram}}{\\left(\\mathrm{meter} \\cdot \\mathrm{second}\\right)}$"
+      ],
+      "text/plain": [
+       "1.8371493734583912e-05 <Unit('kilogram / meter / second')>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from particula.environment import Environment\n",
-    "Environment().dynamic_viscoity() # will produce approx 1.84e-5 kg/m/s"
+    "Environment().dynamic_viscosity() # will produce approx 1.84e-5 kg/m/s"
    ]
   },
   {
@@ -151,9 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean free path is  6.647984982685411e-08 meter\n"
+     ]
+    }
+   ],
    "source": [
     "from particula.environment import Environment\n",
     "print(\"mean free path is \", Environment().mean_free_path()) # will produce approx 66.5 nm"
@@ -177,8 +227,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
