--- a/docs/documentation/vapor.ipynb
+++ b/docs/documentation/vapor.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperature is  300 kelvin\n",
+      "pressure is  101325 kilogram / meter / second ** 2\n",
+      "vapor radius is  1.6e-09 meter\n"
+     ]
+    }
+   ],
    "source": [
     "from particula import u\n",
     "from particula.vapor import Vapor\n",
     "\n",
-    "VapOne = Vapo(temperature=300) \n",
+    "VapOne = Vapor(temperature=300) \n",
     "print(\"temperature is \", VapOne.temperature) # will print 300 K\n",
     "print(\"pressure is \", VapOne.pressure) # will print 101325 Pa (kg/m/s^2)\n",
     "print(\"vapor radius is \", VapOne.vapor_radius)  # will print 1.6 nm"
@@ -84,8 +94,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
