--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -35,8 +35,8 @@
     "\n",
     "| attribute              | unit        | default value\n",
     "| ---------              | ----        | -------------\n",
-    "| `temperature`          | K           | 298.15\n",
-    "| `pressure`             | Pa          | 101325\n",
+    "| `temperature`          | K           | `298.15`\n",
+    "| `pressure`             | Pa          | `101325`\n",
     "| `dynamic_viscosity`    | Pa s        | `util.dynamic_viscosity`\n",
     "| `molecular_weight`     | kg / mol    | `constants.MOLECULAR_WEIGHT_AIR`\n",
     "| `reference_viscosity`  | Pa s        | `constants.REF_VISCOSITY_AIR_STP`\n",
