--- a/docs/documentation/particle.ipynb
+++ b/docs/documentation/particle.ipynb
@@ -26,9 +26,9 @@
     "| `mode`       | m           | `1e-7`\n",
     "\n",
     "methods:\n",
-    "pre_radius\n",
-    "pre_discretize\n",
-    "pre_distribution"
+    "- pre_radius\n",
+    "- pre_discretize\n",
+    "- pre_distribution"
    ]
   },
   {
@@ -39,57 +39,52 @@
     "\n",
     "| attribute         | unit        | default value\n",
     "| ---------         | ----        | -------------\n",
-    "| `particle_radius` |             | `\"linspace\"`\n",
-    "| `particle_number` | / kg        | `1e-6`\n",
-    "| `particle_density`| / kg m^-3    | `1e-6`\n",
-    "| `shape_factor`    |             | `1e-7`\n",
-    "| `volume_void`     | / m^3       | `1e-6`\n",
-    "| `particle_charge` | / C         | `1e-6`\n",
+    "| `particle_radius` | m           | `None` or `ParticleDistribution.pre_radius()`\n",
+    "| `particle_number` |             | `1` or `ParticleDistribution.nparticles`\n",
+    "| `particle_density`| kg / m^-3   | `1e3`\n",
+    "| `shape_factor`    |             | `1`\n",
+    "| `volume_void`     |             | `0`\n",
+    "| `particle_charge` |             | `0`\n",
     "\n",
     "\n",
     "methods:\n",
-    "particle_distribution\n",
-    "mass\n",
-    "knudsen_number\n",
-    "slip_correction_factor\n",
-    "friction_factor"
+    "- particle_distribution\n",
+    "- mass\n",
+    "- knudsen_number\n",
+    "- slip_correction_factor\n",
+    "- friction_factor"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and then it can be initiated with (some of) the following attributes.\n",
+    "## The `Particle` Class\n",
     "\n",
-    "## `Particle` attributes\n",
+    "| attribute                   | unit               | default value\n",
+    "| ---------                   | ----               | -------------\n",
+    "| `elementary_charge_value`   | C                  | `constants.ELEMENTARY_CHARGE_VALUE`\n",
+    "| `electric_permittivity`     | F / m              | `constants.ELECTRIC_PERMITTIVITY`\n",
+    "| `boltzmann_constant`        | kg * m^2 / K / s^2 | `constants.BOLTZMANN_CONSTANT`\n",
+    "| `coagulation_approximation` |                    | `\"hardsphere\"`\n",
     "\n",
-    "| attribute              | unit        | default value\n",
-    "| ---------              | ----        | -------------\n",
-    "| `spacing`          | K           | 298.15\n",
-    "| `nbins`             | Pa          | 101325\n",
-    "| `dynamic_viscosity`    | Pa s        | `util.dynamic_viscosity`\n",
-    "| `molecular_weight`     | kg / mol    | `constants.MOLECULAR_WEIGHT_AIR`\n",
-    "| `reference_viscosity`  | Pa s        | `constants.REF_VISCOSITY_AIR_STP`\n",
-    "| `reference_temperature`| K           | `constants.REF_TEMPERATURE_STP`\n",
-    "| `sutherland_constant`  | K           | `constants.SUTHERLAND_CONSTANT`\n",
-    "| `gas_constant`         | J / mol / K | `constants.GAS_CONSTANT`\n",
     "\n",
-    "For example, `Environment(temperature=300)` initiates the class with a temperature of 300 K and the above defaults. Note that, `particula` will assign K if the input is scalar like `temperature=300`. However, it will raise an error if the input has the *wrong* units. All attributes can be accessed by `.<attr>` after `Environment` like below, where `<attr>` is one of the above."
+    "methods:\n",
+    "- _coag_prep\n",
+    "- reduced_mass\n",
+    "- reduced_friction_factor\n",
+    "- coulomb_potential_ratio\n",
+    "- coulomb_enhancement_kinetic_limit\n",
+    "- coulomb_enhancement_continuum_limit\n",
+    "- diffusive_knudsen_number\n",
+    "- dimensionless_coagulation\n",
+    "- coagulation"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
