--- a/docs/documentation/vapor.ipynb
+++ b/docs/documentation/vapor.ipynb
@@ -38,11 +38,11 @@
     "\n",
     "| attribute             | unit     | default\n",
     "| ---------             | ----     | -------\n",
-    "| `vapor_radius`        | m        | 1.6e-9\n",
-    "| `vapor_density`       | kg / m^3 | 1400\n",
-    "| `vapor_concentration` | kg / m^3 | 1e-5\n",
-    "| `vapor_attachment`    |          | 1\n",
-    "| `vapor_molec_wt`      | kg / mol | 0.2\n",
+    "| `vapor_radius`        | m        | `1.6e-9`\n",
+    "| `vapor_density`       | kg / m^3 | `1400`\n",
+    "| `vapor_concentration` | kg / m^3 | `1e-5`\n",
+    "| `vapor_attachment`    |          | `1`\n",
+    "| `vapor_molec_wt`      | kg / mol | `0.2`\n",
     "\n",
     "For example, `Vapor(vapor_radius=1e-9)` initiates the class with vapor radius of 1 nm with all other default attributes. Additionally, `Vapor(vapor_radius=1e-9, temperature=290)` will initiate the class with 290 K and 1 nm, in addition to all other attributes. Above, `vapor_radius` and `vapor_density` refer to the radius of the condensing vapor and its density, respectively. The `vapor_concentration` attribute defines the driving force of condensation (defined below). The `vapor_attachment` coefficient is the sticking coefficient between a vapor and a particle and it is dimensionless; `vapor_molec_wt` is the molecular weight of the condensing vapor. \n",
     "\n",
