--- a/docs/documentation/particle.ipynb
+++ b/docs/documentation/particle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The `Particle` Class\n",
+    "# The Particle Classes\n",
     "\n",
     "The `Particle` class is the base class for all particles, whether introduced discretely one by one or as a distribution. In reality, the `Particle` class is based on two intermediate classes: `ParticleDistribution` and `ParticleInstances` to instantiate particle distributions and particles directly, respectively."
    ]
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The `ParticleDistribution` Class\n",
+    "## `ParticleDistribution` attributes\n",
     "\n",
     "| attribute    | unit        | default value\n",
     "| ---------    | ----        | -------------\n",
@@ -25,10 +25,23 @@
     "| `gsigma`     |             | `1.25`\n",
     "| `mode`       | m           | `1e-7`\n",
     "\n",
-    "methods:\n",
-    "- pre_radius\n",
-    "- pre_discretize\n",
-    "- pre_distribution"
+    "## `ParticleDistribution` methods\n",
+    "\n",
+    "#### `ParticleDistribution.pre_radius()`\n",
+    "\n",
+    "This method uses the attributes `cutoff`, `gsigma`, and `mode`, to determine the starting and ending radii according to the utility `cutoff_radius.cut_rad`. Here, `cutoff` refers to the probability cutoff (e.g. `cutoff=0.9999` means taking only 99.99% of the lognormal distribution). Moreover, `gsigma` and `mode` are the lognormal parameters of the distribution, referring to the geometric standard deviation and mode (geometric mean) respectively. We use the scipy.stats.lognorm to construct the distribution in `pre_discretize()` below.\n",
+    "\n",
+    "Then, the `spacing` is used to create a vector of radii with size `nbins`. The `spacing` attribute is a string and for now, it can only be `\"linspace\"` or `\"logspace\"`, using the numpy.linspace or numpy.logspace functions, respectively.\n",
+    "\n",
+    "Finally, the `pre_radius()` method returns a radius vector with units of m.\n",
+    "\n",
+    "#### `ParticleDistribution.pre_discretize()`\n",
+    "\n",
+    "This method uses the result of the pre_radius() method, the disttype attribute, gsigma, and mode, to produce a probability density function distribution based on the scipy.stats.lognorm (lognormal). This is done via the `distribution_discretization.discretize` utility.  \n",
+    "\n",
+    "#### `ParticleDistribution.pre_distribution()`\n",
+    "\n",
+    "This method simply construct the distribution multiplying the product of pre_discretize() by number and dividing by volume."
    ]
   },
   {
