--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, one attribute has a default value from `particula.util`. As explained below, we calculate the dynamic viscosity via the Sutherland formula using the temperature (as well as the reference values of temperature, visocsity, and Sutherland constant). The user can override this calculating by offering a different dynamic viscosity with the attribute `dynamic_viscosity`."
+    "Finally, one attribute has a default value from `particula.util`. As explained below, we calculate the dynamic viscosity via the Sutherland formula using the temperature (as well as the reference values of temperature, viscosity, and Sutherland constant). The user can override this calculating by offering a different dynamic viscosity with the attribute `dynamic_viscosity`."
    ]
   },
   {
@@ -216,8 +216,8 @@
     "## Notes\n",
     "\n",
     "- While technically allowed, we discourage the users from using vectored temperature and pressure quantities for now. We design `particula` with the intention of having each point in time (calculation) having a unique set of conditions.\n",
-    "- Attributes are called without parantheses, e.g. `Environment().temperature`.\n",
-    "- Methods are called with parantheses, e.g. `Environment().mean_free_path()`."
+    "- Attributes are called without parentheses, e.g. `Environment().temperature`.\n",
+    "- Methods are called with parentheses, e.g. `Environment().mean_free_path()`."
    ]
   },
   {
