--- a/docs/documentation/particle.ipynb
+++ b/docs/documentation/particle.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "#### `ParticleDistribution.pre_discretize()`\n",
     "\n",
-    "This method uses the result of the pre_radius() method, the disttype attribute, gsigma, and mode, to produce a probability density function distribution based on the scipy.stats.lognorm (lognormal). This is done via the `distribution_discretization.discretize` utility.  \n",
+    "This method uses the result of the pre_radius() method, the `disttype` attribute, gsigma, and mode, to produce a probability density function distribution based on the scipy.stats.lognorm (lognormal). This is done via the `distribution_discretization.discretize` utility.  \n",
     "\n",
     "#### `ParticleDistribution.pre_distribution()`\n",
     "\n",
