--- a/docs/utilities/radius_cutoff.ipynb
+++ b/docs/utilities/radius_cutoff.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### `Environment.mean_free_path()`\n",
     "\n",
-    "This routine determins the radius cutoff for the particle distribution\n",
+    "This routine determines the radius cutoff for the particle distribution\n",
     "\n",
     "        Inputs:\n",
     "            cutoff  (float) coverage cutoff (default: .9999)\n",
