--- a/docs/utilities/distribution_discretization.ipynb
+++ b/docs/utilities/distribution_discretization.ipynb
@@ -7,10 +7,10 @@
     "    \"\"\" discretize the distribution of the particles\n",
     "\n",
     "        Parameters:\n",
-    "            interval    (float) the size interval of the distribution\n",
-    "            distype     (str)   the type of distribution, \"lognormal\" for now\n",
-    "            gsigma      (float) geometric standard deviation of distribution\n",
-    "            mode        (float) pdf scale (corresponds to mode in lognormal)\n",
+    "            interval     (float) the size interval of the distribution\n",
+    "            disttype     (str)   the type of distribution, \"lognormal\" for now\n",
+    "            gsigma       (float) geometric standard deviation of distribution\n",
+    "            mode         (float) pdf scale (corresponds to mode in lognormal)\n",
     "    \"\"\"\n"
    ]
   },
